# mcop

./: .gitignore  CMakeLists.txt  PHASES.md  Plan.md  README.md  summary.md
apps/: price.cpp
benchmarks/: convergence.cpp  throughput.cpp
include/mcop/: binomial_tree.hpp  black_scholes.hpp  engine.hpp  gbm_sample.hpp  inverse_normal.hpp  longstaff_schwartz.hpp  math_utils.hpp  mc_kernel.hpp  monte_carlo.hpp  option.hpp  parallel_monte_carlo.hpp  rng.hpp  sobol.hpp  thread_pool.hpp  version.hpp
python/: CMakeLists.txt  bindings.cpp  demo.py  test_bindings.py
site/: build_pdf.sh  charts.js  export_data.py  index.html  styles.css
src/: binomial_tree.cpp  black_scholes.cpp  longstaff_schwartz.cpp  monte_carlo.cpp  parallel_monte_carlo.cpp  sobol.cpp  version.cpp
tests/: test_binomial_tree.cpp  test_black_scholes.cpp  test_data_models.cpp  test_framework.hpp  test_longstaff_schwartz.cpp  test_monte_carlo.cpp  test_parallel.cpp  test_sobol.cpp
